--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "execa": "^9.1.0",
     "md5": "^2.3.0",
     "octokit": "^4.0.2",
+    "snorun": "^1.1.17",
     "toml": "^3.0.0",
     "zx": "^8.1.0"
   }
