fix(main): env questions
env questions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comfy-registry-pr",
+  "name": "@snomiao/comfy-registry-pr",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
