fix(main): bunsh
bunsh

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rambda": "^9.2.0",
     "snorun": "^1.1.17",
     "toml": "^3.0.0",
+    "yaml": "^2.4.2",
     "yargs": "^17.7.2",
     "zx": "^8.1.0"
   },
