feat(main): repo list and help
repo list and help

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "execa": "^9.1.0",
     "md5": "^2.3.0",
     "octokit": "^4.0.2",
+    "p-map": "^7.0.2",
     "rambda": "^9.2.0",
     "snorun": "^1.1.17",
     "toml": "^3.0.0",
